* FEA#8550 Initialize distribution network during contract subscription process if current user has one defined
* OTH#0000 Rename module from offered_distribution to contract_distribution and merge with contract_process_distribution

Version 1.14 - 2017-11-09
* OTH#0000 Move the commercial product field in the "Product" section of contracts

Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06

Version 1.6 - 2015-12-23

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22

Version 1.2 - 2014-07-01
* FEA#0000 Changelog file creation