@@ -38,3 +38,12 @@ xml_dir = /tmp
 # profile = model.ir.ui.menu.read
 # db = model.ir.ui.menu.read
 # query = 0.2
+
+[cryptolog]
+url = https://sign.test.cryptolog.com/sign/rpc
+no_verify = 1
+auth_mode = basic
+username = test.coopengo@universign.com
+password = C28PU4A2
+success-url = https://localhost/web/#attachment/{att.id}
+fail-url = https://localhost/web/#attachment/{att.id}
