@@ -1,6 +1,6 @@
 # This file is part of Coog. The COPYRIGHT file at the top level of
 # this repository contains the full copyright notices and license terms.
-from trytond.pool import PoolMeta
+from trytond.pool import PoolMeta, Pool
 
 from trytond.modules.coog_core import fields
 
@@ -15,6 +15,9 @@ class User:
 
     dist_network = fields.Many2One('distribution.network',
         'Distribution Network')
+    network_distributors = fields.Function(
+        fields.Many2Many('distribution.network', None, None,
+            'User Network Distributors'), 'get_network_distributors')
 
     @classmethod
     def __setup__(cls):
@@ -26,3 +29,12 @@ class User:
         result = super(User, cls)._export_light()
         result.add('dist_network')
         return result
+
+    def get_network_distributors(self, name):
+        if self.dist_network:
+            candidates = [x.id for x in self.dist_network.all_children
+            if x.is_distributor]
+        else:
+            candidates = [x.id for x in Pool().get(
+                'distribution.network').search([('is_distributor', '=', True)])]
+        return candidates
