@@ -1,4 +1,5 @@
-* FEA#8550 Initialisation du réseau de distribution durant le processus de souscription si un réseau est défini sur l'utilisateur connecté 
+* BUG#8148 La liste des distributeurs autorisés doit prendre en compte le réseau de distribution de l'utilisateur
+* FEA#8550 Initialisation du réseau de distribution durant le processus de souscription si un réseau est défini sur l'utilisateur connecté
 * OTH#0000 Renommage du module de offered_distribution en contract_distribution et fusion avec contract_process_distribution
 
 Version 1.14 - 2017-11-09
